--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5fdc5aab",
+   "metadata": {},
+   "source": [
+    "#### Header"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2f13385d",
@@ -8,10 +16,24 @@
    "outputs": [],
    "source": [
     "#include <iostream>\n",
-    "using namespace std;\n",
-    "\n",
-    "cout << \"lo\";"
+    "using namespace std;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "501b3166",
+   "metadata": {},
+   "source": [
+    "#### Hello World"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec918a29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
