--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5fdc5aab",
+   "id": "afc8aad9",
    "metadata": {},
    "source": [
     "#### Header"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "501b3166",
+   "id": "af7e6d54",
    "metadata": {},
    "source": [
     "#### Hello World"
@@ -30,10 +30,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec918a29",
+   "id": "600fba30",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cout << \"Namaskar Vishwa\";"
+   ]
   }
  ],
  "metadata": {
