--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "afc8aad9",
+   "id": "2f43a8a1",
    "metadata": {},
    "source": [
     "#### Header"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2f13385d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af7e6d54",
+   "id": "6271617c",
    "metadata": {},
    "source": [
     "#### Hello World"
@@ -29,10 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "600fba30",
+   "execution_count": 2,
+   "id": "98417921",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Namaskar Vishwa"
+     ]
+    }
+   ],
    "source": [
     "cout << \"Namaskar Vishwa\";"
    ]
