--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e65c8ab4",
+   "id": "04dc51d8",
    "metadata": {},
    "source": [
-    "#### Memory size of datatypes"
+    "#### Memory size of datatypes in Bytes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fd119a9f",
+   "id": "246250b3",
    "metadata": {},
    "outputs": [
     {
@@ -76,14 +76,16 @@
     "int sizeof_long=sizeof(long);\n",
     "int sizeof_unsigned_int=sizeof(unsigned int);\n",
     "int sizeof_string=sizeof(string);\n",
-    "cout<<\"int\\tchar\\tfloat\\tdouble\\tlong\\tunsigned int\\tstring\\n\";\n",
-    "cout<<sizeof_int<<\"\\t\"<<sizeof_char<<\"\\t\"<<sizeof_float<<\"\\t\"<<sizeof_double<<\"\\t\"<<sizeof_long<<\"\\t\"<<sizeof_unsigned_int<<\"\\t\\t\"<<sizeof_string;"
+    "int sizeof_bool=sizeof(bool);\n",
+    "int sizeof_short=sizeof(short);\n",
+    "cout<<\"int\\tchar\\tfloat\\tdouble\\tlong\\tunsigned int\\tstring\\tbool\\tshort\\n\";\n",
+    "cout<<sizeof_int<<\"\\t\"<<sizeof_char<<\"\\t\"<<sizeof_float<<\"\\t\"<<sizeof_double<<\"\\t\"<<sizeof_long<<\"\\t\"<<sizeof_unsigned_int<<\"\\t\\t\"<<sizeof_string<<\"\\t\"<<sizeof_bool<<\"\\t\"<<sizeof_short;"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eda55e6",
+   "id": "160398d4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -91,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a39906",
+   "id": "9236e96d",
    "metadata": {},
    "outputs": [],
    "source": []
