--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04dc51d8",
+   "id": "91e5548e",
    "metadata": {},
    "source": [
     "#### Memory size of datatypes in Bytes"
@@ -56,15 +56,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "246250b3",
+   "id": "4cc52f28",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "int\tchar\tfloat\tdouble\tlong\tunsigned int\tstring\n",
-      "4\t1\t4\t8\t8\t4\t\t32"
+      "int\tchar\tfloat\tdouble\tlong\tunsigned int\tstring\tbool\tshort\n",
+      "4\t1\t4\t8\t8\t4\t\t32\t1\t2"
      ]
     }
    ],
@@ -83,17 +83,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "160398d4",
+   "cell_type": "markdown",
+   "id": "e96ce6be",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Conditionals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f839fb13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5>3"
+     ]
+    }
+   ],
+   "source": [
+    "if(3>5){\n",
+    "    cout<<\"3>5\";\n",
+    "}\n",
+    "else if{\n",
+    "    cout<<\"5>3\";\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9236e96d",
+   "id": "b0baf6ee",
    "metadata": {},
    "outputs": [],
    "source": []
