--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91e5548e",
+   "id": "6d99d672",
    "metadata": {},
    "source": [
     "#### Memory size of datatypes in Bytes"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4cc52f28",
+   "id": "52c4e0f6",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e96ce6be",
+   "id": "c279aa89",
    "metadata": {},
    "source": [
     "#### Conditionals"
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f839fb13",
+   "execution_count": 6,
+   "id": "f200deca",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,10 @@
     "if(3>5){\n",
     "    cout<<\"3>5\";\n",
     "}\n",
-    "else if{\n",
+    "else if(3==5){\n",
+    "    cout<<\"3=5\";\n",
+    "}\n",
+    "else{\n",
     "    cout<<\"5>3\";\n",
     "}"
    ]
@@ -116,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0baf6ee",
+   "id": "3b47f6db",
    "metadata": {},
    "outputs": [],
    "source": []
