--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -117,9 +117,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "712a201e",
+   "metadata": {},
+   "source": [
+    "#### While loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "347bd7f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 "
+     ]
+    }
+   ],
+   "source": [
+    "int i=0;\n",
+    "while(i<=5)\n",
+    "{\n",
+    "    cout<<i<<\" \";\n",
+    "    i++;\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79f2a138",
+   "id": "95d27951",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54475bdb",
    "metadata": {},
    "outputs": [],
    "source": []
