--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "712a201e",
+   "id": "9477c408",
    "metadata": {},
    "source": [
     "#### While loop"
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "347bd7f7",
+   "id": "7f54a4c9",
    "metadata": {},
    "outputs": [
     {
@@ -148,20 +148,368 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95d27951",
+   "cell_type": "markdown",
+   "id": "33a83cc5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Pattern 1\n",
+    "## ***\n",
+    "## ***\n",
+    "## ***"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "54475bdb",
+   "execution_count": 6,
+   "id": "cd19a47e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***\n",
+      "***\n",
+      "***\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3,i=1;\n",
+    "while(i<=n){\n",
+    "    int j=1;\n",
+    "    while(j<=n){\n",
+    "        cout<<'*';\n",
+    "        j=j+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    i=i+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e30bb31f",
+   "metadata": {},
+   "source": [
+    "#### Pattern 2\n",
+    "#### 111\n",
+    "#### 222\n",
+    "#### 333"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "080914df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111\n",
+      "222\n",
+      "333\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3,i=1;\n",
+    "while(i<=n){\n",
+    "    int j=1;\n",
+    "    while(j<=n){\n",
+    "        cout<<i;\n",
+    "        j=j+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    i=i+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43e20608",
+   "metadata": {},
+   "source": [
+    "#### Pattern 3\n",
+    "#### 123\n",
+    "#### 123\n",
+    "#### 123"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8fb4ed39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "123\n",
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3,i=1;\n",
+    "while(i<=n){\n",
+    "    int j=1;\n",
+    "    while(j<=n){\n",
+    "        cout<<j;\n",
+    "        j=j+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    i=i+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da9de108",
+   "metadata": {},
+   "source": [
+    "#### Pattern 4\n",
+    "#### 321\n",
+    "#### 321\n",
+    "#### 321"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6545122f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "321\n",
+      "321\n",
+      "321\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3,i=1;\n",
+    "while(i<=n){\n",
+    "    int j=1;\n",
+    "    while(j<=n){\n",
+    "        cout<<n-j+1;\n",
+    "        j=j+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    i=i+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbd2faa9",
+   "metadata": {},
+   "source": [
+    "#### Pattern 5\n",
+    "#### 333\n",
+    "#### 222\n",
+    "#### 111"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f30508ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "333\n",
+      "222\n",
+      "111\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3,i=1;\n",
+    "while(i<=n){\n",
+    "    int j=1;\n",
+    "    while(j<=n){\n",
+    "        cout<<n-i+1;\n",
+    "        j=j+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    i=i+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "281541b5",
+   "metadata": {},
+   "source": [
+    "#### Pattern 6\n",
+    "#### 123\n",
+    "#### 456\n",
+    "#### 789"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a05c054c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "456\n",
+      "789\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3,i=1,k=1;\n",
+    "while(i<=n){\n",
+    "    int j=1;\n",
+    "    while(j<=n){\n",
+    "        cout<<k;\n",
+    "        k=k+1;\n",
+    "        j=j+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    i=i+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86b82c6d",
+   "metadata": {},
+   "source": [
+    "#### Pattern 7\n",
+    "#### 987\n",
+    "#### 654\n",
+    "#### 321"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "20c72a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "987\n",
+      "654\n",
+      "321\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3,i=1,k=9;\n",
+    "while(i<=n){\n",
+    "    int j=1;\n",
+    "    while(j<=n){\n",
+    "        cout<<k;\n",
+    "        k=k-1;\n",
+    "        j=j+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    i=i+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dda79fb0",
+   "metadata": {},
+   "source": [
+    "#### Pattern 8\n",
+    "## *\n",
+    "## **\n",
+    "## ***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b5c9f170",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3,i=1;\n",
+    "while(i<=n){\n",
+    "    int j=1;\n",
+    "    while(j<=i){\n",
+    "        cout<<'*';\n",
+    "        j=j+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    i=i+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c78c1c35",
+   "metadata": {},
+   "source": [
+    "#### Pattern 9\n",
+    "## ***\n",
+    "## **\n",
+    "## *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2e8ba3db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3,i=1;\n",
+    "while(i<=n){\n",
+    "    int j=i;\n",
+    "    while(j<=n){\n",
+    "        cout<<'*';\n",
+    "        j=j+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    i=i+1;\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
