--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9477c408",
+   "id": "d4c5d778",
    "metadata": {},
    "source": [
     "#### While loop"
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7f54a4c9",
+   "id": "06a39c6b",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33a83cc5",
+   "id": "6f74921e",
    "metadata": {},
    "source": [
     "#### Pattern 1\n",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cd19a47e",
+   "id": "9ca5ec24",
    "metadata": {},
    "outputs": [
     {
@@ -175,21 +175,21 @@
     }
    ],
    "source": [
-    "int n=3,i=1;\n",
-    "while(i<=n){\n",
-    "    int j=1;\n",
-    "    while(j<=n){\n",
+    "int n=3,row=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
     "        cout<<'*';\n",
-    "        j=j+1;\n",
+    "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
-    "    i=i+1;\n",
+    "    row=row+1;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e30bb31f",
+   "id": "091ee2aa",
    "metadata": {},
    "source": [
     "#### Pattern 2\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "080914df",
+   "id": "789dbbcd",
    "metadata": {},
    "outputs": [
     {
@@ -215,21 +215,21 @@
     }
    ],
    "source": [
-    "int n=3,i=1;\n",
-    "while(i<=n){\n",
-    "    int j=1;\n",
-    "    while(j<=n){\n",
-    "        cout<<i;\n",
-    "        j=j+1;\n",
+    "int n=3,row=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        cout<<row;\n",
+    "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
-    "    i=i+1;\n",
+    "    row=row+1;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "43e20608",
+   "id": "c81f1380",
    "metadata": {},
    "source": [
     "#### Pattern 3\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8fb4ed39",
+   "id": "21224dda",
    "metadata": {},
    "outputs": [
     {
@@ -255,21 +255,21 @@
     }
    ],
    "source": [
-    "int n=3,i=1;\n",
-    "while(i<=n){\n",
-    "    int j=1;\n",
-    "    while(j<=n){\n",
-    "        cout<<j;\n",
-    "        j=j+1;\n",
+    "int n=3,row=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        cout<<col;\n",
+    "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
-    "    i=i+1;\n",
+    "    row=row+1;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "da9de108",
+   "id": "e40fda7e",
    "metadata": {},
    "source": [
     "#### Pattern 4\n",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6545122f",
+   "id": "493ef950",
    "metadata": {
     "scrolled": true
    },
@@ -297,21 +297,21 @@
     }
    ],
    "source": [
-    "int n=3,i=1;\n",
-    "while(i<=n){\n",
-    "    int j=1;\n",
-    "    while(j<=n){\n",
-    "        cout<<n-j+1;\n",
-    "        j=j+1;\n",
+    "int n=3,row=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        cout<<n-col+1;\n",
+    "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
-    "    i=i+1;\n",
+    "    row=row+1;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cbd2faa9",
+   "id": "45288769",
    "metadata": {},
    "source": [
     "#### Pattern 5\n",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f30508ef",
+   "id": "ab2b3e56",
    "metadata": {},
    "outputs": [
     {
@@ -337,21 +337,21 @@
     }
    ],
    "source": [
-    "int n=3,i=1;\n",
-    "while(i<=n){\n",
-    "    int j=1;\n",
-    "    while(j<=n){\n",
-    "        cout<<n-i+1;\n",
-    "        j=j+1;\n",
+    "int n=3,row=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        cout<<n-row+1;\n",
+    "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
-    "    i=i+1;\n",
+    "    row=row+1;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "281541b5",
+   "id": "b5693384",
    "metadata": {},
    "source": [
     "#### Pattern 6\n",
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a05c054c",
+   "id": "6f87a12b",
    "metadata": {},
    "outputs": [
     {
@@ -377,22 +377,22 @@
     }
    ],
    "source": [
-    "int n=3,i=1,k=1;\n",
-    "while(i<=n){\n",
-    "    int j=1;\n",
-    "    while(j<=n){\n",
-    "        cout<<k;\n",
-    "        k=k+1;\n",
-    "        j=j+1;\n",
+    "int n=3,row=1,count=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        cout<<count;\n",
+    "        count=count+1;\n",
+    "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
-    "    i=i+1;\n",
+    "    row=row+1;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "86b82c6d",
+   "id": "a6d6e174",
    "metadata": {},
    "source": [
     "#### Pattern 7\n",
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "20c72a77",
+   "id": "339a56c9",
    "metadata": {},
    "outputs": [
     {
@@ -418,22 +418,22 @@
     }
    ],
    "source": [
-    "int n=3,i=1,k=9;\n",
-    "while(i<=n){\n",
-    "    int j=1;\n",
-    "    while(j<=n){\n",
-    "        cout<<k;\n",
-    "        k=k-1;\n",
-    "        j=j+1;\n",
+    "int n=3,row=1,count=9;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        cout<<count;\n",
+    "        count=count-1;\n",
+    "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
-    "    i=i+1;\n",
+    "    row=row+1;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dda79fb0",
+   "id": "30bfd2ae",
    "metadata": {},
    "source": [
     "#### Pattern 8\n",
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b5c9f170",
+   "id": "846108f0",
    "metadata": {},
    "outputs": [
     {
@@ -459,21 +459,21 @@
     }
    ],
    "source": [
-    "int n=3,i=1;\n",
-    "while(i<=n){\n",
-    "    int j=1;\n",
-    "    while(j<=i){\n",
+    "int n=3,row=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
     "        cout<<'*';\n",
-    "        j=j+1;\n",
+    "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
-    "    i=i+1;\n",
+    "    row=row+1;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c78c1c35",
+   "id": "bbe2731b",
    "metadata": {},
    "source": [
     "#### Pattern 9\n",
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2e8ba3db",
+   "id": "d3131562",
    "metadata": {},
    "outputs": [
     {
@@ -499,16 +499,24 @@
     }
    ],
    "source": [
-    "int n=3,i=1;\n",
-    "while(i<=n){\n",
-    "    int j=i;\n",
-    "    while(j<=n){\n",
+    "int n=3,row=1;\n",
+    "while(row<=n){\n",
+    "    int col=row;\n",
+    "    while(col<=n){\n",
     "        cout<<'*';\n",
-    "        j=j+1;\n",
+    "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
-    "    i=i+1;\n",
+    "    row=row+1;\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "616b7438",
+   "metadata": {},
+   "source": [
+    "#### Pattern 10\n"
    ]
   }
  ],
