--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -418,7 +418,7 @@
     }
    ],
    "source": [
-    "int n=3,row=1,count=9;\n",
+    "int n=3,row=1,count=n*n;\n",
     "while(row<=n){\n",
     "    int col=1;\n",
     "    while(col<=n){\n",
@@ -516,8 +516,132 @@
    "id": "450c3b5d",
    "metadata": {},
    "source": [
-    "#### Pattern 10\n"
+    "#### Pattern 10\n",
+    "#### 1\n",
+    "#### 23\n",
+    "#### 456"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7879d6e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "23\n",
+      "456\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1,n=3,count=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<count;\n",
+    "        count=count+1;\n",
+    "        col=col+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row=row+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec8db3cc",
+   "metadata": {},
+   "source": [
+    "#### Pattern 11\n",
+    "#### 123\n",
+    "#### 45\n",
+    "#### 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2433986c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "45\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3,row=1,count=1;\n",
+    "while(row<=n){\n",
+    "    int col=row;\n",
+    "    while(col<=n){\n",
+    "        cout<<count;\n",
+    "        count=count+1;\n",
+    "        col=col+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row=row+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14941420",
+   "metadata": {},
+   "source": [
+    "#### Pattern 12\n",
+    "#### 654\n",
+    "#### 32\n",
+    "#### 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "50d45038",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\t7\t6\t5\t\n",
+      "4\t3\t2\t\n",
+      "1\t0\t\n",
+      "-1\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=4,row=1,count=;\n",
+    "while(row<=n){\n",
+    "    int col=row;\n",
+    "    while(col<=n){\n",
+    "        cout<<count<<'\\t';\n",
+    "        count=count-1;\n",
+    "        col=col+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row=row+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2310fe2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
