--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7879d6e5",
+   "id": "08ccad39",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8db3cc",
+   "id": "f3fab22d",
    "metadata": {},
    "source": [
     "#### Pattern 11\n",
@@ -565,8 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "2433986c",
+   "execution_count": 16,
+   "id": "a3933dd1",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14941420",
+   "id": "e456b7d0",
    "metadata": {},
    "source": [
     "#### Pattern 12\n",
@@ -606,23 +606,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "50d45038",
+   "execution_count": 18,
+   "id": "8a8d0963",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\t7\t6\t5\t\n",
-      "4\t3\t2\t\n",
-      "1\t0\t\n",
-      "-1\t\n"
+      "10\t9\t8\t7\t\n",
+      "6\t5\t4\t\n",
+      "3\t2\t\n",
+      "1\t\n"
      ]
     }
    ],
    "source": [
-    "int n=4,row=1,count=;\n",
+    "int n=4,row=1,count=10;\n",
     "while(row<=n){\n",
     "    int col=row;\n",
     "    while(col<=n){\n",
@@ -636,9 +636,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1161e073",
+   "metadata": {},
+   "source": [
+    "#### Patter 13\n",
+    "#### 1\n",
+    "#### 23\n",
+    "#### 345\n",
+    "#### 4567"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2022aa87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "23\n",
+      "345\n",
+      "4567\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=4, row=1;\n",
+    "while(row<=n){\n",
+    "    int col=1,count=row;\n",
+    "    while(col<=row){\n",
+    "        cout<<row;//count;\n",
+    "        //count=count+1;\n",
+    "        col=col+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row=row+1;\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2310fe2",
+   "id": "622fa48c",
    "metadata": {},
    "outputs": [],
    "source": []
