--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "08ccad39",
+   "id": "261289d0",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3fab22d",
+   "id": "37f9a36b",
    "metadata": {},
    "source": [
     "#### Pattern 11\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a3933dd1",
+   "id": "bac1f532",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e456b7d0",
+   "id": "7d010cd1",
    "metadata": {},
    "source": [
     "#### Pattern 12\n",
@@ -606,27 +606,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "8a8d0963",
+   "execution_count": 17,
+   "id": "78a950d3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\t9\t8\t7\t\n",
-      "6\t5\t4\t\n",
-      "3\t2\t\n",
-      "1\t\n"
+      "654\n",
+      "32\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "int n=4,row=1,count=10;\n",
+    "int n=3,row=1,count=n*(n+1)/2;\n",
     "while(row<=n){\n",
     "    int col=row;\n",
     "    while(col<=n){\n",
-    "        cout<<count<<'\\t';\n",
+    "        cout<<count;\n",
     "        count=count-1;\n",
     "        col=col+1;\n",
     "    }\n",
@@ -637,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1161e073",
+   "id": "eacf5105",
    "metadata": {},
    "source": [
     "#### Patter 13\n",
@@ -649,8 +648,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "2022aa87",
+   "execution_count": 18,
+   "id": "fdbb0d59",
    "metadata": {},
    "outputs": [
     {
@@ -669,8 +668,8 @@
     "while(row<=n){\n",
     "    int col=1,count=row;\n",
     "    while(col<=row){\n",
-    "        cout<<row;//count;\n",
-    "        //count=count+1;\n",
+    "        cout<<count;\n",
+    "        count=count+1;\n",
     "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
@@ -681,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "622fa48c",
+   "id": "d0b81a9d",
    "metadata": {},
    "outputs": [],
    "source": []
