--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -639,7 +639,7 @@
    "id": "9b8d711c",
    "metadata": {},
    "source": [
-    "#### Patter 13\n",
+    "#### Pattern 13\n",
     "#### 1\n",
     "#### 23\n",
     "#### 345\n",
@@ -678,11 +678,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc91f04b",
+   "cell_type": "markdown",
+   "id": "862259da",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
