--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -678,10 +678,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "862259da",
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7e974e8a",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "22\n",
+      "333\n",
+      "4444\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=4, row=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<row;\n",
+    "        col=col+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row=row+1;\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
