--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -664,6 +664,7 @@
     }
    ],
    "source": [
+    "// Way 1\n",
     "int n=4, row=1;\n",
     "while(row<=n){\n",
     "    int col=1,count=row;\n",
@@ -679,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "7e974e8a",
+   "execution_count": 19,
+   "id": "cfb53e80",
    "metadata": {},
    "outputs": [
     {
@@ -688,9 +689,52 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "22\n",
-      "333\n",
-      "4444\n"
+      "23\n",
+      "345\n",
+      "4567\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Way 2\n",
+    "int n=4, row=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<row+col-1;\n",
+    "        col=col+1;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row=row+1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9476e3be",
+   "metadata": {},
+   "source": [
+    "#### Pattern 14\n",
+    "#### 1\n",
+    "#### 21\n",
+    "#### 321\n",
+    "#### 4321"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5768c6f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "21\n",
+      "321\n",
+      "4321\n"
      ]
     }
    ],
@@ -699,13 +743,146 @@
     "while(row<=n){\n",
     "    int col=1;\n",
     "    while(col<=row){\n",
-    "        cout<<row;\n",
+    "        cout<<row-col+1;\n",
     "        col=col+1;\n",
     "    }\n",
     "    cout<<endl;\n",
     "    row=row+1;\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f50a390e",
+   "metadata": {},
+   "source": [
+    "#### Pattern 15\n",
+    "#### AAA\n",
+    "#### BBB\n",
+    "#### CCC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "536bc4b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAA\n",
+      "BBB\n",
+      "CCC\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3, row=1;\n",
+    "\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        char val='A'+row-1;\n",
+    "        cout<<val;\n",
+    "        val++;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03e4b8c7",
+   "metadata": {},
+   "source": [
+    "#### Pattern 16\n",
+    "#### ABC\n",
+    "#### ABC\n",
+    "#### ABC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "784b4d5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "ABC\n",
+      "ABC\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3, row=1;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    char val='A';\n",
+    "    while(col<=n){\n",
+    "        cout<<val;\n",
+    "        val++;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e1f32f3",
+   "metadata": {},
+   "source": [
+    "#### Pattern 17\n",
+    "#### ABC\n",
+    "#### DEF\n",
+    "#### GHI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0b3f4690",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "DEF\n",
+      "GHI\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=3, row=1;\n",
+    "char val='A';\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        cout<<val;\n",
+    "        val++;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6ffb605",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
