--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -433,10 +433,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16b954c0",
+   "id": "2b610727",
    "metadata": {},
    "source": [
     "#### Pattern 8\n",
+    "#### 123\n",
+    "#### 234\n",
+    "#### 345"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "44153a42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "234\n",
+      "345\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=3;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        cout<<row+col-1;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16b954c0",
+   "metadata": {},
+   "source": [
+    "#### Pattern 9\n",
     "## *\n",
     "## **\n",
     "## ***"
@@ -476,7 +516,7 @@
    "id": "7f515f61",
    "metadata": {},
    "source": [
-    "#### Pattern 9\n",
+    "#### Pattern 10\n",
     "## ***\n",
     "## **\n",
     "## *"
@@ -516,7 +556,7 @@
    "id": "450c3b5d",
    "metadata": {},
    "source": [
-    "#### Pattern 10\n",
+    "#### Pattern 11\n",
     "#### 1\n",
     "#### 23\n",
     "#### 456"
@@ -557,7 +597,7 @@
    "id": "98fe0f8c",
    "metadata": {},
    "source": [
-    "#### Pattern 11\n",
+    "#### Pattern 12\n",
     "#### 123\n",
     "#### 45\n",
     "#### 6"
@@ -598,7 +638,7 @@
    "id": "574cf1f8",
    "metadata": {},
    "source": [
-    "#### Pattern 12\n",
+    "#### Pattern 13\n",
     "#### 654\n",
     "#### 32\n",
     "#### 1"
@@ -639,7 +679,7 @@
    "id": "9b8d711c",
    "metadata": {},
    "source": [
-    "#### Pattern 13\n",
+    "#### Pattern 14\n",
     "#### 1\n",
     "#### 23\n",
     "#### 345\n",
@@ -680,8 +720,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "b4d88f2b",
+   "execution_count": 33,
+   "id": "d0f65e0e",
    "metadata": {},
    "outputs": [
     {
@@ -711,10 +751,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72673bdd",
+   "id": "c2bda5d7",
    "metadata": {},
    "source": [
-    "#### Pattern 14\n",
+    "#### Pattern 15\n",
     "#### 1\n",
     "#### 21\n",
     "#### 321\n",
@@ -724,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "19aec9a2",
+   "id": "1cc690ec",
    "metadata": {},
    "outputs": [
     {
@@ -753,10 +793,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "560064fe",
+   "id": "d88fca54",
    "metadata": {},
    "source": [
-    "#### Pattern 15\n",
+    "#### Pattern 16\n",
     "#### AAA\n",
     "#### BBB\n",
     "#### CCC"
@@ -765,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4eb463c2",
+   "id": "a1795dfd",
    "metadata": {},
    "outputs": [
     {
@@ -796,10 +836,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb8f4ac",
+   "id": "8e56b257",
    "metadata": {},
    "source": [
-    "#### Pattern 16\n",
+    "#### Pattern 17\n",
     "#### ABC\n",
     "#### ABC\n",
     "#### ABC"
@@ -807,8 +847,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "2665a345",
+   "execution_count": 28,
+   "id": "d6d44a6c",
    "metadata": {},
    "outputs": [
     {
@@ -822,6 +862,7 @@
     }
    ],
    "source": [
+    "// Way 1\n",
     "int n=3, row=1;\n",
     "while(row<=n){\n",
     "    int col=1;\n",
@@ -837,11 +878,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c8c4590b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "ABC\n",
+      "ABC\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Way 2\n",
+    "int row=1, n=3;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        char val='A'+col-1;\n",
+    "        cout<<val;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "50bf0543",
+   "id": "eebeb9ca",
    "metadata": {},
    "source": [
-    "#### Pattern 17\n",
+    "#### Pattern 18\n",
     "#### ABC\n",
     "#### DEF\n",
     "#### GHI"
@@ -850,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cf6d752a",
+   "id": "9bf110d7",
    "metadata": {},
    "outputs": [
     {
@@ -880,8 +952,52 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a85cdc4",
+   "id": "27b99250",
    "metadata": {},
+   "source": [
+    "#### Pattern 19\n",
+    "#### ABC\n",
+    "#### BCD\n",
+    "#### CDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c11743d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "656565\n",
+      "666666\n",
+      "676767\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=3;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        char val='A';\n",
+    "        cout<<val+row-1;\n",
+    "        val++;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "242f9583",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
